tests/macro_syntax/value_is_not_constant.stderr
error[E0658]: cannot call conditionally-const associated function `<usize as Default>::default` in constant functions
 --> tests/macro_syntax/value_is_not_constant.rs:7:26
  |
7 |     #[const_init(value = Default::default())]
  |                          ^^^^^^^^^^^^^^^^^^
  |
  = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants
  = note: see issue #143874 <https://github.com/rust-lang/rust/issues/143874> for more information

error: `Default` is not yet stable as a const trait
 --> tests/macro_syntax/value_is_not_constant.rs:7:26
  |
7 |     #[const_init(value = Default::default())]
  |                          ^^^^^^^^^^^^^^^^^^
